javaDSL/src/test/resources/typeSystemTestModels/valid/names/InterfaceValidSuperTypes.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.names;

import java.io.Serializable;
import java.util.List;

public interface InterfaceValidSuperTypes extends Serializable, List<String> {

}
