javaDSL/src/test/resources/typeSystemTestModels/invalid/interfaces/InterfaceCannotExtendClasses.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.interfaces;

import java.util.ArrayList;
import java.lang.String;

public interface InterfaceCannotExtendClasses extends ArrayList<String> {


}
